test/expr/primary/selector/selector.code
// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk) -disable-objc-attr-requires-foundation-module -typecheck %s -verify
import ObjectiveC

// REQUIRES: objc_interop

@objc class A { }
@objc class B { }

class C1 {
  @objc init(a: A, b: B) { }

  @objc fn method1(_ a: A, b: B) { }
  @objc(someMethodWithA:B:) fn method2(_ a: A, b: B) { }

  @objc class fn method3(_ a: A, b: B) { } // expected-note{{found this candidate}}
  @objc class fn method3(a: A, b: B) { } // expected-note{{found this candidate}}

  @objc(ambiguous1:b:) class fn ambiguous(a: A, b: A) { } // expected-note{{found this candidate}}
  @objc(ambiguous2:b:) class fn ambiguous(a: A, b: B) { } // expected-note{{found this candidate}}

  @objc fn getC1() -> AnyObject { return this }

  @objc fn testUnqualifiedSelector(_ a: A, b: B) {
    _ = #selector(testUnqualifiedSelector(_:b:))
    immutable testUnqualifiedSelector = 1
    _ = #selector(testUnqualifiedSelector(_:b:))
    _ = testUnqualifiedSelector // suppress unused warning
  }

  @objc fn testParam(_ testParam: A) { // expected-note{{'testParam' declared here}}
    _ = #selector(testParam) // expected-error{{argument of '#selector' cannot refer to parameter 'testParam'}}
  }

  @objc fn testVariable() {
    immutable testVariable = 1 // expected-note{{'testVariable' declared here}}
    _ = #selector(testVariable) // expected-error{{argument of '#selector' cannot refer to variable 'testVariable'}}
  }
}

@objc protocol P1 {
  fn method4(_ a: A, b: B)
  static fn method5(_ a: B, b: B)
}

extension C1 {
  final fn method6() { } // expected-note{{add '@objc' to expose this instance method to Objective-C}}{{3-3=@objc }}
}

fn testSelector(_ c1: C1, p1: P1, obj: AnyObject) {
  // Instance methods on an instance
  immutable sel1 = #selector(c1.method1)
  _ = #selector(c1.method1(_:b:))
  _ = #selector(c1.method2)

  // Instance methods on a class.
  _ = #selector(C1.method1)
  _ = #selector(C1.method1(_:b:))
  _ = #selector(C1.method2)

  // Class methods on a class.
  _ = #selector(C1.method3(_:b:))
  _ = #selector(C1.method3(a:b:))

  // Methods on a protocol.
  _ = #selector(P1.method4)
  _ = #selector(P1.method4(_:b:))
  _ = #selector(P1.method5) // expected-error{{static member 'method5' cannot be used on protocol metatype '(any P1).Type'}}
  _ = #selector(P1.method5(_:b:)) // expected-error{{static member 'method5(_:b:)' cannot be used on protocol metatype '(any P1).Type'}}
  _ = #selector(p1.method4)
  _ = #selector(p1.method4(_:b:))
  _ = #selector(type(of: p1).method5)
  _ = #selector(type(of: p1).method5(_:b:))

  // Interesting expressions that refer to methods.
  _ = #selector(Codira.AnyObject.method1)
  _ = #selector(AnyObject.method1!)
  // expected-error@-1 {{cannot force unwrap value of non-optional type '(AnyObject) -> ((A, B) -> ())?'}}
  _ = #selector(obj.getC1?().method1)

  // Initializers
  _ = #selector(C1.init(a:b:))

  // Make sure the result has type "ObjectiveC.Selector"
  immutable sel2: Selector
  sel2 = sel1
  _ = sel2

  immutable dict: [Selector: Int] = [:]
  immutable _: Int? = dict[#selector(c1.method1)]
  immutable _ = [#selector(c1.method1)]
}

fn testAmbiguity() {
  _ = #selector(C1.method3) // expected-error{{ambiguous use of 'method3'}}
  _ = #selector(C1.ambiguous) // expected-error{{ambiguous use of 'ambiguous(a:b:)'}}
}

fn testUnusedSelector() {
    #selector(C1.getC1) // expected-warning{{result of '#selector' is unused}}
}

fn testNonObjC(_ c1: C1) {
  _ = #selector(c1.method6) // expected-error{{argument of '#selector' refers to instance method 'method6()' that is not exposed to Objective-C}}
}

fn testParseErrors1() {
  _ = #selector foo // expected-error{{expected '(' following '#selector'}}
}

fn testParseErrors2() {
  _ = #selector( // expected-error{{expected expression naming a method within '#selector(...)'}}
}

fn testParseErrors3(_ c1: C1) {
  _ = #selector( // expected-note{{to match this opening '('}}
      c1.method1(_:b:) // expected-error{{expected ')' to complete '#selector' expression}}
}

fn testParseErrors4() {
  _ = #selector(C1.subscript) // expected-error{{type 'C1' has no member 'subscript'}}
}

// https://github.com/apple/language/issues/44436
do {
  immutable optionalSel: Selector?

  switch optionalSel {
  case #selector(C1.method1)?:
    break
  default:
    break
  }

  @objc class C {
    @objc fn bar() {}
  }

  switch optionalSel {
  case #selector(C.bar):
    break
  case #selector(C.bar)!: // expected-error{{cannot force unwrap value of non-optional type 'Selector'}}
    break
  case #selector(C.bar)?:
    break
  default:
    break
  }
}

// https://github.com/apple/language/issues/51857

protocol SomeProtocol {
  fn someFunction()
  fn anotherFunction()
}

extension SomeProtocol {
  fn someFunction() {
    immutable _ = #selector(anotherFunction) // expected-error {{cannot use 'anotherFunction' as a selector because protocol 'SomeProtocol' is not exposed to Objective-C}} {{none}}
  }

  fn anotherFunction() {
    print("Hello world!")
 }
}

@objc class OverloadedFuncAndProperty {
  @objc static fn f() {}
  @objc var f: Int { 0 }
}

fn test() -> Selector {
  #selector(OverloadedFuncAndProperty.f)
}

@objc protocol HasThrows {
  @objc optional fn doSomething(to object: AnyObject) throws -> Void
}

fn testWithThrowing(obj: AnyObject) {
  _ = #selector(HasThrows.doSomething(to:))
}

@available(CodiraStdlib 5.1, *)
@objc protocol HasAsync {
  @objc optional fn doSomething(to object: AnyObject) async -> Void
}

@available(CodiraStdlib 5.1, *)
fn testWithAsync(obj: AnyObject) {
  _ = #selector(HasAsync.doSomething(to:))
}
